Bug 931463 - Shader editor programs checkboxes misaligned on Linux, r=past
UltraBlame original commit: fc10d6b12014da45dee6a118e00cc5f7dc80b43c

--- a/browser/themes/linux/devtools/shadereditor.css
+++ b/browser/themes/linux/devtools/shadereditor.css
@@ -3,3 +3,7 @@
 
 
 %include ../../shared/devtools/shadereditor.inc.css
+
+.side-menu-widget-item-checkbox > .checkbox-spacer-box {
+  -moz-appearance: none;
+}
